Bug 267424 - MKV subtitle support fishy
Summary: MKV subtitle support fishy
Status: RESOLVED FIXED
Alias: None
Product: phonon-backend-vlc
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR minor
Target Milestone: ---
Assignee: Harald Sitter
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-02 02:12 UTC by Harald Sitter
Modified: 2011-04-27 21:34 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2011-03-02 02:12:50 UTC
Version:           4.4.3 (KDE 4.6.x)
OS:                Linux

Like bug https://bugs.kde.org/show_bug.cgi?id=183538

With the vlc backen mkv files play the default subtitle however it seems one cannot select subtitles accordingly nor turn off the default subtitle.

Reproducible: Didn't try
Comment 1 Harald Sitter 2011-04-19 18:31:48 UTC
Git commit c2f60a0468a8687df46ee13b12173d1253d48ba9 by Harald Sitter.
Committed on 19/04/2011 at 18:32.
Pushed by sitter into branch 'master'.

"fix" subtitle control in dragon player

It actually is more of a patch for the problem as the libphonon design is heavily flawed in that it exposes MediaController specific descriptors to the world also via the backend. Now as the Backend is a singleton but the MC is not, there is a bit of a scope problem... The present solution thus introduces a global overlord master subtitle manager where each MC needs to store its subtitles. Additionally libvlc seems broken as it reports completely bogus SPU ids \o/

The code at hand needs refactoring && bugfixing && cleanup && documentation && *whine*

BUG: 267424

M  +39   -21   vlc/mediacontroller.cpp     
M  +167  -2    vlc/mediacontroller.h     

http://commits.kde.org/phonon-vlc/c2f60a0468a8687df46ee13b12173d1253d48ba9
Comment 2 Myriam Schweingruber 2011-04-27 21:34:04 UTC
Reassigning to the new bugzilla product for better bug tracing of the various
backends. Sorry for the noise.